--- a/index.html
+++ b/index.html
@@ -4,32 +4,16 @@
     <meta charset="UTF-8">
     <title></title>
 
-
-
     <script src="scripts/jquery-2.1.4.js"></script>
-    <script src="scripts/jquery-ui-1.11.4/jquery-ui.js"></script>
-    <script src="scripts/MonthPicker.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
-
-
-    <link href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" media="all" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="css/MonthPicker.css">
+    <script src="scripts/jquery.bootpag.js"></script>
+    <script src="scripts/bootstrap-datepicker.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap-theme.css">
-
+    <link rel="stylesheet" href="css/bootstrap-datepicker3.css">
     <script>
         $(document).ready(function() {
-//            $('.month-picker-input').MonthPicker(
-//                    {
-//                        Position : {at : "left+20 top+40"},
-//                        OnAfterChooseMonth : function() {
-//                            var selectedMonthYear = $(this).MonthPicker('GetSelectedMonthYear');
-//                            $("#start_date").text(selectedMonthYear);
-//                        }
-//                    }
-//            );
-
 
             String.prototype.format = String.prototype.format = function () {
                 var args = arguments;
@@ -42,6 +26,7 @@
 
             var tabTemplate = '<li><a data-toggle="tab" href="#{0}">{1}<button class="close closeTab" type="button" >×</button></a></li>';
             var tabContentTemplate = '<div id="{0}" class="tab-pane fade">{1}</div>';
+            var paginationTemplate = '<p class="pagination"></p>';
 
             var openedTabs = {};
 
@@ -71,10 +56,43 @@
             }
 
             function createTabContent(contentId) {
+
                 //TODO по contentId сгенерировать контент (AJAX)
-                var newTabContent = $(tabContentTemplate.format(contentId, $("#template").html()));
+                var content = $("#template").html();
+                content = content + paginationTemplate;
+
+                var newTabContent = $(tabContentTemplate.format(contentId, content));
                 newTabContent.appendTo("#tab-content");
+                setUpDatePicker(newTabContent);
+                setUpPagination(newTabContent, 11); //TODO totalPages динамически из AJAX
             }
+
+            function setUpDatePicker(tabContent) {
+                tabContent.find(".dateInput").each(function(){
+                    $(this).datepicker({
+                        format: "mm-yyyy",
+                        startView: "months",
+                        minViewMode: "months",
+                        autoclose: true
+                    });
+                });
+            }
+
+            function setUpPagination(tabContent, totalPages) {
+                tabContent.find(".pagination").bootpag({
+                    total: totalPages,
+                    page: 1,
+                    maxVisible: 10,
+                    leaps: true,
+                    firstLastUse: true,
+                    first: '←',
+                    last: '→'
+                }).on("page", function(event, /* page number here */ num) {
+                    //TODO если обновится контент?
+                    var contentId = $(this).parent().attr("id");
+                });
+            }
+
 
             function setUpCloseEvent(tab) {
                 tab.find(".closeTab").click(function() {
@@ -85,6 +103,7 @@
                     delete openedTabs[reportId];
                 });
             }
+
         });
     </script>
 
@@ -95,7 +114,6 @@
 
 
     <div class="row top-menu">
-        <div class="col-md-10"><ul class="nav nav-tabs" id="tabs"></ul></div>
         <div class="col-md-2">
             <div class="dropdown">
                 <button class="btn dropdown-toggle report-select" type="button" data-toggle="dropdown">Выбрать отчет</button>
@@ -107,10 +125,29 @@
                 </ul>
             </div>
         </div>
+        <div class="col-md-10"><ul class="nav nav-tabs" id="tabs"></ul></div>
     </div>
-    <div class="tab-content" id="tab-content"></div>
+    <div class="tab-content content" id="tab-content"></div>
 
     <div class="hidden" id="template">
+
+        <div class="parameters">
+            <div class="form-inline">
+                <span>Отчетный период с</span>
+                <div class="input-group date dateInput">
+                    <input class="form-control" size="16" type="text" readonly>
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                </div>
+                <span>по</span>
+                <div class="input-group date dateInput">
+                    <input class="form-control" size="16" type="text" readonly>
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                </div>
+                <button class="btn apply" type="button">Применить</button>
+            </div>
+        </div>
+
+        <!--будет убрано-->
         <table class="table table-bordered">
             <thead>
             <tr>
@@ -138,8 +175,6 @@
             </tbody>
         </table>
     </div>
-
 </div>
-    <!--<input class='month-picker-hidden month-picker-input' type="text"  title="#"/>-->
 </body>
 </html>
