pagination update fix

--- a/index.html
+++ b/index.html
@@ -5,170 +5,16 @@
     <title></title>
 
     <script src="scripts/jquery-2.1.4.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
+    <script src="scripts/bootstrap.js"></script>
     <script src="scripts/jquery.bootpag.js"></script>
     <script src="scripts/bootstrap-datepicker.js"></script>
     <script src="scripts/bootstrap-datepicker.ru.js"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <script src="scripts/script.js"></script>
+
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap-theme.css">
     <link rel="stylesheet" href="css/bootstrap-datepicker3.css">
-    <script>
-        $(document).ready(function() {
-
-            String.prototype.format = String.prototype.format = function () {
-                var args = arguments;
-                return this.replace(/\{\{|\}\}|\{(\d+)\}/g, function (m, n) {
-                    if (m == "{{") { return "{"; }
-                    if (m == "}}") { return "}"; }
-                    return args[n];
-                });
-            };
-
-            Date.prototype.monthDays= function(){
-                var d = new Date(this.getFullYear(), this.getMonth() + 1, 0);
-                return d.getDate();
-            };
-
-            Date.prototype.getNormalizedMonth= function(){
-                var month = (this.getMonth() + 1).toString();
-                if(month.length === 1) {
-                    month = "0" + month;
-                }
-                return month;
-            };
-
-
-
-            var tabTemplate = '<li><a data-toggle="tab" href="#{0}">{1}<button class="close closeTab" type="button" >×</button></a></li>';
-            var tabContentTemplate = '<div id="{0}" class="tab-pane fade">{1}</div>';
-            var paginationTemplate = '<p class="pagination"></p>';
-            var datePickerTemplate =
-                    '<div class="parameters">' +
-                        '<div class="form-inline">' +
-                            '<span>Отчетный период с</span>' +
-                            '<div class="input-group date dateInput" id="startPeriod">' +
-                                '<input class="form-control" size="16" type="text" readonly>' +
-                                '<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>' +
-                            '</div> ' +
-                            '<span>по</span> ' +
-                            '<div class="input-group date dateInput" id="endPeriod">' +
-                                '<input class="form-control" size="16" type="text" readonly>' +
-                                '<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>' +
-                            '</div>' +
-                            '<button class="btn apply" type="button">Применить</button>' +
-                        '</div>' +
-                    '</div>' + '<div class="tabContent"></div>';
-
-
-            var openedTabs = {};
-
-
-            $(".dropdown-menu li a").click(function(event) {
-
-                var reportId = $(this).attr("href").substring(1);
-                var reportName = $(this).text();
-
-                if(reportId in openedTabs) {
-                    openedTabs[reportId].tab('show');
-                } else {
-                    var newTab = createTab(reportName, reportId);
-                    setUpCloseEvent(newTab);
-                    createTabContent(reportId);
-                    openedTabs[reportId] = newTab;
-                    newTab.tab('show');
-                }
-                event.preventDefault();
-            });
-
-
-            function createTab(tabName, contentId) {
-                var tab = $(tabTemplate.format(contentId, tabName));
-                tab.appendTo("#tabs");
-                return tab.children("a");
-            }
-
-            function createTabContent(contentId) {
-                var newTabContent = $(tabContentTemplate.format(contentId, datePickerTemplate));
-                newTabContent.appendTo("#tab-content");
-                setUpDatePickers(newTabContent);
-                setUpApplyButtonEvent(newTabContent, contentId);
-            }
-
-            function setUpDatePickers(tabContent) {
-
-                var options = {
-                    startView: "months",
-                    minViewMode: "months",
-                    autoclose: true,
-                    language: 'ru'
-                };
-
-                tabContent.find("#startPeriod").datepicker($.extend(options, {
-                    format: {
-                        toDisplay: function (date) {
-                            return "01." + date.getNormalizedMonth() + "." + date.getFullYear();
-                        },
-                        toValue: function () {
-                            return "";
-                        }
-                    }
-                }));
-
-                tabContent.find("#endPeriod").datepicker($.extend(options, {
-                    format: {
-                        toDisplay: function (date) {
-                            return date.monthDays() + "." + date.getNormalizedMonth() + "." + date.getFullYear();
-                        },
-                        toValue: function () {
-                            return "";
-                        }
-                    }
-                }));
-            }
-
-            function setUpApplyButtonEvent(tabContent, contentId) {
-                tabContent.find(".apply").click(function(event){
-
-                    //TODO по contentId сгенерировать контент (AJAX)
-                    var content = $("#template").html();
-
-                    content = content + paginationTemplate;
-                    $("#" + contentId + " .tabContent").replaceWith(function() {
-                        return $(content).fadeIn();
-                    });
-                    setUpPagination(tabContent, 11);  //TODO totalPages(второй параметр)динамически из AJAX
-                });
-            }
-
-            function setUpPagination(tabContent, totalPages) {
-                tabContent.find(".pagination").bootpag({
-                    total: totalPages,
-                    page: 1,
-                    maxVisible: 10,
-                    leaps: true,
-                    firstLastUse: true,
-                    first: '←',
-                    last: '→'
-                }).on("page", function(event, /* page number here */ num) {
-                    //TODO тут обробатываем педжинацию, а если обновится контент?
-                    var contentId = $(this).parent().attr("id");
-                });
-            }
-
-
-            function setUpCloseEvent(tab) {
-                tab.find(".closeTab").click(function() {
-                    var reportId = $(this).parent().attr("href").substring(1);
-                    $(this).parent().parent().remove();
-                    $('#' + reportId).remove();
-                    $('#tabs a:first').tab('show'); //TODO сюда прикрутить логику последней активной вкладки
-                    delete openedTabs[reportId];
-                });
-            }
-
-        });
-    </script>
+    <link rel="stylesheet" href="css/style.css">
 
 
 </head>
@@ -194,7 +40,147 @@
 
     <div class="hidden" id="template">
 
-        <!--будет убрано-->
+            <table class="table table-bordered">
+                <thead>
+                <tr>
+                    <th>Firstname</th>
+                    <th>Lastname</th>
+                    <th>Email</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>John</td>
+                    <td>Doe</td>
+                    <td>john@example.com</td>
+                </tr>
+                <tr>
+                    <td>Mary</td>
+                    <td>Moe</td>
+                    <td>mary@example.com</td>
+                </tr>
+                <tr>
+                    <td>July</td>
+                    <td>Dooley</td>
+                    <td>july@example.com</td>
+                </tr>
+                <tr>
+                    <td>John</td>
+                    <td>Doe</td>
+                    <td>john@example.com</td>
+                </tr>
+                <tr>
+                    <td>John</td>
+                    <td>Doe</td>
+                    <td>john@example.com</td>
+                </tr>
+                <tr>
+                    <td>John</td>
+                    <td>Doe</td>
+                    <td>john@example.com</td>
+                </tr>
+                <tr>
+                    <td>Mary</td>
+                    <td>Moe</td>
+                    <td>mary@example.com</td>
+                </tr>
+                <tr>
+                    <td>July</td>
+                    <td>Dooley</td>
+                    <td>july@example.com</td>
+                </tr>
+                <tr>
+                    <td>John</td>
+                    <td>Doe</td>
+                    <td>john@example.com</td>
+                </tr>
+                <tr>
+                    <td>John</td>
+                    <td>Doe</td>
+                    <td>john@example.com</td>
+                </tr>
+                <tr>
+                    <td>John</td>
+                    <td>Doe</td>
+                    <td>john@example.com</td>
+                </tr>
+                <tr>
+                    <td>Mary</td>
+                    <td>Moe</td>
+                    <td>mary@example.com</td>
+                </tr>
+                <tr>
+                    <td>July</td>
+                    <td>Dooley</td>
+                    <td>july@example.com</td>
+                </tr>
+                <tr>
+                    <td>John</td>
+                    <td>Doe</td>
+                    <td>john@example.com</td>
+                </tr>
+                <tr>
+                    <td>John</td>
+                    <td>Doe</td>
+                    <td>john@example.com</td>
+                </tr>
+                <tr>
+                    <td>John</td>
+                    <td>Doe</td>
+                    <td>john@example.com</td>
+                </tr>
+                <tr>
+                    <td>Mary</td>
+                    <td>Moe</td>
+                    <td>mary@example.com</td>
+                </tr>
+                <tr>
+                    <td>July</td>
+                    <td>Dooley</td>
+                    <td>july@example.com</td>
+                </tr>
+                <tr>
+                    <td>John</td>
+                    <td>Doe</td>
+                    <td>john@example.com</td>
+                </tr>
+                <tr>
+                    <td>John</td>
+                    <td>Doe</td>
+                    <td>john@example.com</td>
+                </tr>
+                <tr>
+                    <td>John</td>
+                    <td>Doe</td>
+                    <td>john@example.com</td>
+                </tr>
+                <tr>
+                    <td>Mary</td>
+                    <td>Moe</td>
+                    <td>mary@example.com</td>
+                </tr>
+                <tr>
+                    <td>July</td>
+                    <td>Dooley</td>
+                    <td>july@example.com</td>
+                </tr>
+                <tr>
+                    <td>John</td>
+                    <td>Doe</td>
+                    <td>john@example.com</td>
+                </tr>
+                <tr>
+                    <td>John</td>
+                    <td>Doe</td>
+                    <td>john@example.com</td>
+                </tr>
+
+                </tbody>
+            </table>
+    </div>
+
+    <div class="hidden" id="template2">
+
         <table class="table table-bordered">
             <thead>
             <tr>
@@ -208,16 +194,6 @@
                 <td>John</td>
                 <td>Doe</td>
                 <td>john@example.com</td>
-            </tr>
-            <tr>
-                <td>Mary</td>
-                <td>Moe</td>
-                <td>mary@example.com</td>
-            </tr>
-            <tr>
-                <td>July</td>
-                <td>Dooley</td>
-                <td>july@example.com</td>
             </tr>
             <tr>
                 <td>John</td>
